# vandermeer

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  crawler.py  main.py  pyproject.toml
backend/src/models/: table.py
backend/src/schemas/: table.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/pages/: single-table.jsx  tables.jsx
proxy/: Dockerfile  vandermeer.conf
