[tool.poetry]
name = "vandermeer-backend"
version = "0.0.0"
description = ""
authors = ["Clark Sirl <click66@gmail.com>"]
license = "Apache Licence 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
